--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
         "php": ">=5.1.6"
     },
     "autoload": {
-        "classmap": ["dist/libraries/Luckyauth.php"]
+        "classmap": ["libraries/Luckyauth.php"]
     }
 }
